Something Worth Everything

--- a/frontmatter/3-dedication.tex
+++ b/frontmatter/3-dedication.tex
@@ -1,7 +1,59 @@
-\chapter*{}
-\begin{flushright}
-    \thispagestyle{empty}
-    \vspace*{\fill}
-    \emph{Dedicated to my parents, brother in law and sister.}
-    \vspace*{\fill}
-\end{flushright}
+\doublespacing
+
+
+\chapter*{Recommendation}
+\vspace{3cm}
+The undersigned certify that they have read and recommended to the Department of Electronics and Computer Engineering for acceptance, a thesis entitled “\textit{\thetitle}”, submitted by \theauthor in partial fulfillment of the requirement for the award of the degree of “Master of Science in Computer System and Knowledge Engineering.
+
+\vspace{3cm}
+..........................................
+
+Supervisor
+
+Dr. Surendra Shrestha (PhD)
+
+\vspace{3cm}
+
+
+..........................................
+
+External Examiner
+
+Name:
+
+
+
+
+
+
+
+
+
+\chapter*{Departmental Acceptance}
+
+\textit{(Use letter department’s letter pad for this page)}
+\vspace{3cm}
+
+The thesis entitled "\thetitle", submitted by \theauthor in partial fulfillment of the requirement for the award of the degree of “Master of Science in Computer System and Knowledge Engineering” has been accepted as a bonafide record of work independently carried out by him in the department.
+
+
+
+
+
+\vspace{3cm}
+. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 
+
+Dr. Surendra Shrestha (PhD)
+
+Head of the Department
+
+Department of Electronics and Computer Engineering,
+
+Pulchowk Campus,
+
+Institute of Engineering,
+
+Tribhuvan University,
+
+Nepal.
+
