--- a/main.tex
+++ b/main.tex
@@ -94,7 +94,16 @@
 
 %\input{frontmatter/1-coverpage.tex}
 \input{frontmatter/2-titlepage.tex}
-% \input{frontmatter/3-dedication.tex}
+\thispagestyle{empty}
+\input{frontmatter/3-dedication.tex}
+\thispagestyle{empty}
+\input{frontmatter/titlepages/copyright.tex}
+\thispagestyle{empty}
+\input{frontmatter/titlepages/recommendatiion.tex}
+\thispagestyle{empty}
+
+\input{frontmatter/titlepages/acceptance.tex}
+
 \thispagestyle{empty}
 \input{frontmatter/4-abstract.tex}
 \thispagestyle{empty}
@@ -146,8 +155,8 @@
 
 \input{mainmatter/3-Methodology/methodology.tex}
 \input{mainmatter/4-Results/results.tex}
-% \input{mainmatter/5-Conclusion/conclusion.tex}
-\input{mainmatter/5-Conclusion/limitations.tex}
+\input{mainmatter/5-Conclusion/conclusion.tex}
+% \input{mainmatter/5-Conclusion/limitations.tex}
 
 % Backmatter
 
