--- a/mainmatter/2-Development/development.tex
+++ b/mainmatter/2-Development/development.tex
@@ -13,9 +13,9 @@ The major implication of \acrshort{nfl} is useful when the sample spaces are ope
 
 \section{Literature Review}
 
-Finding the interaction between drugs and proteins based simply on their primary structure information is one of the many challenges faced in drug-synthesis process. The experimental methods are quite expensive in terms of time, money and resources. Still the mutation in cells are growing higher due to extensive use of chemical and electromagnetic radiations in our environment. In one hand, diseases are getting powerful and in the other hand, the experimental method can take months when finding a right cure is considered. One of the solutions to this is use of high computing ends that can automate some of its repetitive works. Therefore, computational methods help to lessen the amount of works required to find right drug partner for the evolving diseases.
+Finding the interaction between drugs and proteins based simply on their primary structure information is one of the many challenges faced in drug-synthesis process. The experimental methods are quite expensive in terms of time, money and resources. Still the mutation in cells are growing higher due to extensive use of chemical and electromagnetic radiations in our environment. In one hand, diseases are getting powerful and in the other hand, the experimental method can take months when finding a right cure is considered. One of the solutions to this is use of high computing ends that can automate some of its repetitive works. Therefore, computational methods help to lessen the amount of works required to find right drug partner for the evolving diseases.\cite{Leelananda2016}
 
-Protein molecules are the workhorses of our body. For example: the blood protein hemoglobin is functional for $O_2$ /$CO_2$ transportation, antibodies defend against viruses and hormonal protein insulin regulates our blood sugar level. The protein has differences in structure, according to the desirable functional characteristics of our body. This structure is so important for our health, that understanding them can aid to cure diseases. For example, diseases like Parkinson’s is unrelated to bacteria/virus but due to incorrect folding of proteins. 
+Protein molecules are the workhorses of our body. For example: the blood protein hemoglobin is functional for $O_2$ /$CO_2$ transportation, antibodies defend against viruses and hormonal protein insulin regulates our blood sugar level. The protein has differences in structure, according to the desirable functional characteristics of our body. This structure is so important for our health, that understanding them can aid to cure diseases. For example, diseases like Parkinson’s is unrelated to bacteria/virus but due to incorrect folding of proteins. \cite{Keasar2018a} 
 \iffalse So, modeling of protein structures is vital to interpret disease mechanisms and design new drug treatments. Modeling of protein requires protein contact prediction after which 3D models are generated using suitable software packages like CONFOLD suite. \fi
 
 Our bodily functions are dependent on protein structure and their interdependent interactions play a vital role. Some of these proteins are of critical interest to biochemistry and biomedicine researchers.\cite{Astrand2019} For example, a protein known as amyloid beta, which forms plaques in the human brain, is a key to understanding Alzheimer's disease. Improving our understanding of correct protein structures can lead to the design of drug treatments that can target deactivation of proteins of interest. Also, the personalized treatment of any sick person by taking sample of protein structure may help design cure for specific cases (eg. due to mutation changes of protein structure), which otherwise is referred in for general case of differently related protein~\cite{Fout2017}.Thus it will solve issues of wrong medication hazards, which are the general scenario for the developing and under-developed countries.
