--- a/mainmatter/5-Conclusion/conclusion.tex
+++ b/mainmatter/5-Conclusion/conclusion.tex
@@ -1,7 +1,9 @@
 \chapter{Conclusion}
 
-\lipsum[2-5]
+The research was conducted for series of experiments using different CNN architectures and validated using four different settings of drug and protein combinations. The experiments show that the network requires past knowledge on proteins and drugs to yield the best results. The model could yield best scores when both the protein and drug were present in the training phase. We also conclude that if the domain has fewer parameters to learn from, we can represent them in new dimensions to achieve better results in machine learning problem.
 
-\section{First Section}
-
-\lipsum[2-5]
+Finally, it concludes that:
+\begin{itemize}
+    \item Proteins need to be represented in higher dimensions of R2RSRV factors and the domain representation by using PSSM features along with the sequence information for formulating protein-solving network architecture.
+    \item Same filter size of 8 can be used to train the CNN layer for both proteins and drugs.
+\end{itemize}
