--- a/bibliography/sample.bib
+++ b/bibliography/sample.bib
@@ -1232,3 +1232,16 @@ title = {{An analysis and evaluation of the WeFold collaborative for protein str
 volume = {8},
 year = {2018}
 }
+@inproceedings{CASP82008,
+abstract = {CASP8 BOOK},
+address = {Riviera Maya, Mexico},
+booktitle = {Thirteen. Meething},
+doi = {10.4274/tftr.24.59.1},
+file = {:Users/anupadkh/Library/Application Support/Mendeley Desktop/Downloaded/Unknown - 2018 - CASP13(2).pdf:pdf},
+isbn = {9781880653968},
+issn = {10986189},
+mendeley-groups = {Protein Modeling,Protein Modeling/Algorithms},
+pages = {1--221},
+title = {{CASP13}},
+year = {2018}
+}
