--- a/mainmatter/5-Conclusion/conclusion.tex
+++ b/mainmatter/5-Conclusion/conclusion.tex
@@ -7,3 +7,8 @@ Finally, it concludes that:
     \item Proteins need to be represented in higher dimensions of R2RSRV factors and the domain representation by using PSSM features along with the sequence information for formulating protein-solving network architecture.
     \item Same filter size of 8 can be used to train the CNN layer for both proteins and drugs.
 \end{itemize}
+
+\section{Future Works}
+
+We have only approached the sample space of \acrfull{nfl} by forming the different feature-sets. The different feature sets on chemical values of drugs can be used to represent a much broader spectrum of drug molecule representation. In case of protein, protein folds could be the incorporated information which could be supplemented for the available 3D protein structures and a good prediction algorithm chosen for \cite{CASP82008}. For the features being evaluated the Grid-Search CV could be applied over various algorithms and Stacking Generalization can be used to create a better optimized machine learning method to solve the problem of protein-drug interaction from sequence information.
+
